Fix back button not showing cursor on hover

--- a/src/components/styles/Game.scss
+++ b/src/components/styles/Game.scss
@@ -27,6 +27,7 @@
     align-items: center;
     gap: 4px;
     text-decoration: underline;
+    cursor: pointer;
 
     .icon {
       width: 16px;
